# BoidsProjection

./: .gitignore  CMakeLists.txt  Development.md  README.md  main.cpp
include/: drawable.h  line.h  point.h
src/: CMakeLists.txt  boid.cpp  boid.h  box.cpp  box.h  camera.cpp  camera.h  drawable.cpp  drawable.h  drawableData.cpp  drawableData.h  line.cpp  line.h  main.cpp  point.cpp  point.h  sanitisation.cpp  sanitisation.h  scrollingBuffer.h  validation.cpp  validation.h  vect.cpp  vect.h  window.cpp  window.h
tests/: CMakeLists.txt  testBoxVerticies.cpp  testInputSanitisation.cpp  testInputValidation.cpp  testRotate.cpp
